# engram

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-on-edit.sh
docs/: capture-schema.md  conventions.md  engram-development-spec.md
docs/adr/: 0001-sqlite-source-of-truth.md  0002-transcript-jsonl-capture.md  0003-no-llm-on-write-path.md  0004-verifiable-capture-completeness.md  0005-changed-code-invalidation.md  0006-stdio-mcp-no-web-framework.md  README.md
docs/tasks/: 00-scaffold.md  A-capture.md  B-consolidation.md  C-retrieval.md  D-evals.md  README.md
src/engram/: __init__.py  cli.py  logging_config.py  models.py
src/engram/capture/: __init__.py  ingest.py  tailer.py
src/engram/capture/adapters/: __init__.py  claude_code.py  codex.py
src/engram/consolidation/: __init__.py  dedup.py  llm.py  pipeline.py  promote.py  summarize.py  task_context.py
src/engram/db/: __init__.py  runner.py
src/engram/db/migrations/: 001_initial.sql  002_eval_metrics.sql  __init__.py
src/engram/eval/: __init__.py
src/engram/mcp/: __init__.py  server.py
src/engram/retrieval/: __init__.py
src/engram/store/: __init__.py  base.py  sqlite_store.py
tests/: test_capture.py  test_consolidation.py  test_eval.py  test_logging_config.py  test_mcp_tools.py  test_migrations.py  test_models.py  test_retrieval.py
tests/fixtures/gold/: sample.json
tests/fixtures/transcripts/: claude_code_session.jsonl
