[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Cross-session memory MCP server for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
engram = "engram.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]
llm = [
    "anthropic>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# N = pep8-naming: enforces the naming conventions documented in docs/conventions.md.
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
# B008: function call in default arg — acceptable for Pydantic Field(default_factory=...)
# SIM117: nested with → not always clearer
ignore = ["B008", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
